parslers-benchmark/src/tests/invalid/semanticErr/print/printTypeErr01.wacc
# type mismatch: int <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = 4 ;
  char y = 'a' ;
  println x + y
end
